[gd_scene load_steps=2 format=3 uid="uid://cqoa35iei6nfb"]

[ext_resource type="Script" path="res://Scenes/Components/GUI/ComparativeTab/ComparativeTab.gd" id="1_yvx88"]

[node name="ComparativeTab" type="Control"]
process_mode = 3
layout_mode = 3
anchors_preset = 0
offset_right = 155.0
offset_bottom = 326.0
mouse_filter = 2
script = ExtResource("1_yvx88")

[node name="LocalBG" type="ColorRect" parent="."]
unique_name_in_owner = true
layout_mode = 1
offset_right = 30.0
offset_bottom = 103.0
mouse_filter = 2
color = Color(0, 0, 0, 0.309804)

[node name="ComparationNumbersTemplate" type="VBoxContainer" parent="."]
unique_name_in_owner = true
visible = false
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0
mouse_filter = 2

[node name="Name" type="Label" parent="ComparationNumbersTemplate"]
layout_mode = 2
text = "Unknow
"
horizontal_alignment = 1

[node name="Numbers" type="HBoxContainer" parent="ComparationNumbersTemplate"]
layout_mode = 2

[node name="01" type="Label" parent="ComparationNumbersTemplate/Numbers"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
text = "0"

[node name="TO" type="Label" parent="ComparationNumbersTemplate/Numbers"]
layout_mode = 2
text = "->"

[node name="02" type="Label" parent="ComparationNumbersTemplate/Numbers"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
text = "0
"

[node name="ComparativeContent" type="VBoxContainer" parent="."]
unique_name_in_owner = true
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0
mouse_filter = 2
